--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.2",
     "contentful": "^10.12.4",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-tagcloud": "^2.3.3",
