--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,9 +22,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install, build, and upload your site
         uses: withastro/action@v2
-        path: .
-        node-version: 20
-        package-manager: pnpm@latest
+        with:
+          path: .
+          node-version: 20
+          package-manager: pnpm@latest
 
   deploy:
     needs: build
