--- a/package.json
+++ b/package.json
@@ -1,37 +1,48 @@
 {
-  "name": "historiabdevil-blog",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro start",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/mdx": "^3.1.0",
-    "@astrojs/react": "^3.5.0",
-    "@astrojs/rss": "^4.0.6",
-    "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/tailwind": "^5.1.0",
-    "@contentful/rich-text-html-renderer": "^16.6.1",
-    "@fontsource/nanum-gothic-coding": "^5.0.18",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "astro": "^4.10.2",
-    "contentful": "^10.12.4",
-    "gh-pages": "^6.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-tagcloud": "^2.3.3",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13"
-  }
+	"name": "historiabdevil-blog",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "cp -rf src/content/blog/assets/* public/ && astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/rss": "4.0.1",
+		"astro": "4.0.8",
+		"astro-font": "^0.0.72",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"@astrojs/check": "^0.8.1",
+		"@astrojs/mdx": "2.0.3",
+		"@astrojs/react": "^3.6.0",
+		"@astrojs/sitemap": "3.0.4",
+		"@astrojs/tailwind": "5.1.0",
+		"@pagefind/default-ui": "^1.0.4",
+		"@tailwindcss/typography": "0.5.10",
+		"@tinacms/cli": "^1.5.30",
+		"@typescript-eslint/parser": "^6.16.0",
+		"clsx": "2.0.0",
+		"eslint": "^8.56.0",
+		"eslint-plugin-astro": "^0.31.0",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^15.2.0",
+		"mdast-util-to-string": "^4.0.0",
+		"motion": "^10.16.4",
+		"pagefind": "^1.0.3",
+		"prettier": "^3.0.3",
+		"prettier-config-standard": "^7.0.0",
+		"prettier-plugin-astro": "^0.12.0",
+		"reading-time": "^1.5.0",
+		"slugify": "^1.6.6",
+		"tailwind-merge": "2.0.0",
+		"tailwindcss": "3.3.5",
+		"tinacms": "^1.5.21",
+		"typescript": "^5.5.3"
+	}
 }
