--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "cp -rf src/content/blog/assets/* public/ && astro check && astro build",
+		"build": "cp -rf ./src/content/blog/assets/* ./public/ && astro check && astro build",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
