빌드 스크립트 수정

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "WORKDIR=pwd; cp -rf $WORKDIR/src/content/blog/assets/* $WORKDIR/public/ && astro check && astro build",
+		"build": "WORKDIR=$(pwd); cp -rf $WORKDIR/src/content/blog/assets/* $WORKDIR/public/ && astro check && astro build",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
