--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: Copy Resources
-        run: ls -al
+        run: ls -al src/content
       - name: Install, build, and upload your site
         uses: withastro/action@v2
         with:
