--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
       - name: Copy Resources
         run: ls -al src/content/blog/assets; cp -r src/content/blog/assets/* public
       - name: Install, build, and upload your site
