--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+          token: ${{ secrets.BLOG_SECRET }}
       - name: Copy Resources
         run: ls -al src/content/blog/assets; cp -r src/content/blog/assets/* public
       - name: Install, build, and upload your site
