--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,12 @@ jobs:
           token: ${{ secrets.BLOG_SECRET }}
       - name: Copy Resources
         run: ls -al src/content/blog/assets; cp -r src/content/blog/assets/* public
+      - name: Commit Update
+        run: |
+          git config --global user.email "bot@noreply.github.com"
+          git config --global user.name "git-bot"
+          git remote set-url origin "https://x-access-token:${{ secrets.BLOG_SECRET }}@github.com/${{ github.repository }}"
+          git commit -am "[no ci]: automated commit submodules" && git push || echo "No changes to commit"
       - name: Install, build, and upload your site
         uses: withastro/action@v2
         with:
